--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,6 @@ dependencies {
     }
     compile 'com.android.support:cardview-v7:26.1.0'
     compile 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testCompile 'junit:junit:4.12'
 }
